--- a/index.qmd
+++ b/index.qmd
@@ -37,31 +37,51 @@ In September 2021, a significant jump in seismic activity on the island of La Pa
 ## Introduction
 
 ```{python}
+#设置全局字体
 import matplotlib.pyplot as plt
 import numpy as np
-eruptions = [1492, 1585, 1646, 1677, 1712, 1949, 1971, 2021]
+import matplotlib as mpl
+config = {
+    'font.family': 'serif',
+    'font.serif': 'Times New Roman',
+    'font.weight': 'bold',
+    'font.size': '16',
+    'mathtext.fontset': 'stix'
+}
+mpl.rcParams.update(config)
 ```
 
 ```{python}
-#| label: fig-timeline
-#| fig-cap: Timeline of recent earthquakes on La Palma
-#| fig-alt: An event plot of the years of the last 8 eruptions on La Palma.
+#| label: fig-s 
+#| fig-cap: 图片排列组合
+#| fig-alt: 图片排列组合
 
-plt.figure(figsize=(6, 1))
-plt.eventplot(eruptions, lineoffsets=0, linelengths=0.1, color='black')
-plt.gca().axes.get_yaxis().set_visible(False)
-plt.ylabel('')
+# 创建画布，实例化一个fig
+fig = plt.figure(figsize=(12, 9.6), dpi=300)
+
+# 创建坐标系
+ax1 = fig.add_subplot(2, 2, 1) 
+ax2 = fig.add_subplot(2, 2, 2)
+ax3 = fig.add_subplot(2, 2, 3)
+ax4 = fig.add_subplot(2, 2, 4)
+
+# 在每个子图的左上角添加标号
+ax1.text(0.02, 0.98, '(a)', transform=ax1.transAxes, fontsize=16, fontweight='bold', va='top', ha='left')
+ax2.text(0.02, 0.98, '(b)', transform=ax2.transAxes, fontsize=16, fontweight='bold', va='top', ha='left')
+ax3.text(0.02, 0.98, '(c)', transform=ax3.transAxes, fontsize=16, fontweight='bold', va='top', ha='left')
+ax4.text(0.02, 0.98, '(d)', transform=ax4.transAxes, fontsize=16, fontweight='bold', va='top', ha='left')
+
+# 绘制图形
+ax3.plot(np.random.randn(50).cumsum(), '-.')
+ax3.plot(np.random.randn(50).cumsum(), '-', color='fuchsia')
+ax1.hist(np.random.randn(100), bins=20, color='C9', alpha=0.3)
+ax2.scatter(np.arange(30), np.arange(30) + 3 * np.random.randn(30))
+ax4.plot(np.random.randn(50).cumsum(), 'k--')
+
 plt.show()
 ```
 
-```{python}
-#| output: false
-
-avg_years_between_eruptions = np.mean(np.diff(eruptions[:-1]))
-avg_years_between_eruptions
-```
-
-Based on data up to and including 1971, eruptions on La Palma happen every 79.8 years on average. Studies of the magma systems feeding the volcano, such as [@albertus2021], have proposed that there are two main magma reservoirs feeding the Cumbre Vieja volcano; one in the mantle (30-40km depth) which charges and in turn feeds a shallower crustal reservoir (10-20km depth). Eight eruptions have been recorded since the late 1400s (@fig-timeline). Data and methods are discussed in @sec-data-methods. Let $x$ denote the number of eruptions in a year. Then, $x$ can be modeled by a Poisson distribution
+Based on data up to and including 1971, eruptions on La Palma happen every 79.8 years on average. Studies of the magma systems feeding the volcano, such as, have proposed that there are two main magma reservoirs feeding the Cumbre Vieja volcano; one in the mantle (30-40km depth) which charges and in turn feeds a shallower crustal reservoir (10-20km depth). Eight eruptions have been recorded since the late 1400s (@fig-s). Data and methods are discussed in @sec-data-methods. Let $x$ denote the number of eruptions in a year. Then, $x$ can be modeled by a Poisson distribution
 
 $$
 p(x) = \frac{e^{-\lambda} \lambda^{x}}{x !}
@@ -85,11 +105,11 @@ where $\lambda$ is the rate of eruptions per year. Using @eq-poisson, the probab
 @tbl-history summarises the eruptions recorded since the colonization of the islands by Europeans in the late 1400s.
 
 {{< embed notebooks/data-screening.qmd#fig-spatial-plot >}}
-@fig-spatial-plot shows the location of recent Earthquakes on La Palma.
+ @fig-spatial-plot shows the location of recent Earthquakes on La Palma.
 
-![notion图床成功](https://file.notion.so/f/f/d63aa876-b695-47a2-ad36-542ae3030618/6915e2b9-9522-455f-bee0-a61dfa290f97/stn-1m2WhXllr8BvEtq3kktRSIhjXgqWi7EJAF4p56sP.png?table=block&id=f6b5aaf7-094f-4b60-917e-b4c95276cb80&spaceId=d63aa876-b695-47a2-ad36-542ae3030618&expirationTimestamp=1727697600000&signature=eUBO8_AlcmBDxbgEStpIBx1WknVh6yZ9Cpwu-hBZLco&downloadName=stn-1m2WhXllr8BvEtq3kktRSIhjXgqWi7EJAF4p56sP.png){#fig-map}
+![notion图床成功](https://file.notion.so/f/f/d63aa876-b695-47a2-ad36-542ae3030618/6915e2b9-9522-455f-bee0-a61dfa290f97/stn-1m2WhXllr8BvEtq3kktRSIhjXgqWi7EJAF4p56sP.png?table=block&id=f6b5aaf7-094f-4b60-917e-b4c95276cb80&spaceId=d63aa876-b695-47a2-ad36-542ae3030618&expirationTimestamp=1727697600000&signature=eUBO8_AlcmBDxbgEStpIBx1WknVh6yZ9Cpwu-hBZLco&downloadName=stn-1m2WhXllr8BvEtq3kktRSIhjXgqWi7EJAF4p56sP.png){#fig-notion}
 
-@fig-map 用notion作为图床成功了
+@fig-notion 用notion作为图床成功了
 
 ## Methods
 
